<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bac_login"

    tools:context=".view.LoginActivity">

    <ImageView
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:src="@drawable/icon_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:scaleType="center"
            android:src="@drawable/icon_account"
            android:gravity="center"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_title"
            />
        <EditText
            android:id="@+id/name_login"
            android:hint="@string/account_hint"
            android:textSize="@dimen/text_small"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="45dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:background="@drawable/shape_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <ImageView
            android:scaleType="center"
            android:src="@drawable/icon_password"
            android:gravity="center"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_title"/>
        <EditText
            android:id="@+id/password_login"
            android:hint="@string/password_hint"
            android:textSize="@dimen/text_small"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:background="@drawable/shape_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group2_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>
    <CheckBox
        android:id="@+id/remember_pwd"
        android:text="记住密码"
        android:button="@drawable/bac_select_compress"
        android:textColor="@color/white"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_button"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="@dimen/text_small"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="17dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_ripple"/>
    <FrameLayout
        android:layout_margin="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:text="@string/register"
            android:textSize="@dimen/text_small"
            android:clickable="true"
            android:onClick="register"
            android:textColor="@color/click_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            android:text="@string/forget"
            android:textSize="@dimen/text_small"
            android:clickable="true"
            android:layout_gravity="end"
            android:textColor="@color/click_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>


    <LinearLayout
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ip"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/set_ip"
            android:onClick="setIp"
            android:text="确定"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <FrameLayout
        android:layout_margin="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TextView
            android:id="@+id/version_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:textColor="@color/colorWhite"
            android:textSize="10sp"
            android:layout_gravity="bottom|left"

            />
    </FrameLayout>

</LinearLayout>
