<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chinastis.cuoti.view.PasswordChangeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <include layout="@layout/line_setting"/>

    <LinearLayout
        android:padding="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:text="@string/old_password"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password_old_password"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:background="@drawable/bac_edit_login"/>
    </LinearLayout>

    <include layout="@layout/line_setting"/>

    <LinearLayout
        android:padding="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:text="@string/new_password"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password_password"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:background="@drawable/bac_edit_login"/>
    </LinearLayout>
    <include layout="@layout/line_setting"/>

    <LinearLayout
        android:padding="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:text="@string/confirm_password"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password_password2"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:background="@drawable/bac_edit_login"/>
    </LinearLayout>
    <include layout="@layout/line_setting"/>

    <Button
        android:text="修改密码"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:id="@+id/change_password"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
